# llgo

./: .gitignore  .goreleaser.yaml  README.md  codecov.yml  go.mod  go.sum
.github/: codecov.yml
.github/workflows/: build-cache.yml  doc-link-checker.yml  doc.yml  fmt.yml  go.yml  goroot.yml  llgo.yml  model-demo.yml  notify-benchmarks.yml  populate_linux_sysroot.sh  release-build.yml  stdlib-coverage.yml  targets.yml  test_demo.sh
_demo/defer/: main.go
_demo/osstat/: osstat.go
_lldb/: README.md  common.sh  llgo_plugin.py  runtest.sh  test.py
_lldb/lldbtest/: main.go
benchmark/binary_size/: README.md
c/clang/: clang.go
cl/: builtin_test.go  caller_frame_test.go  caller_tracking_compile_test.go  compile.go  compile_test.go  debug_alloc.go  debug_alloc_test.go  debug_compile_test.go  debug_scope.go  debug_scope_test.go  embed_with_map_compile_test.go  funcinfo_metadata_test.go  instr.go  instr_offsetof_test.go  range_array_compile_test.go  rewrite_internal_test.go  ssa_referrers.go  ssa_referrers_test.go  static_init.go
dev/: test_goroot.sh
ltoplugin/: CMakeLists.txt  LLGOLTOPasses.cpp  LLGOLTOPasses.h  LLGOLTOPlugin.cpp  LLGOReflectMethodByNamePass.cpp  README.md
runtime/: build.go  overlay.go
ssa/: abitype.go  datastruct.go  decl.go  di.go  di_debug_test.go  dispose_test.go  eh.go  expr.go  funcinfo.go  globaldce.go  globaldce_nodev.go  globals.go  goroutine.go  goroutine_patch_test.go  interface.go  memory.go  memory_large_test.go  needsfp_test.go  package.go  ssa_test.go  stmt_builder.go  type.go  type_patch_test.go
test/: channel_queue_test.go
(+360 files in other folders)
